<resources>
    <string name="app_name">Himalaya</string>
    <string name="searchIcon">搜索</string>
    <string name="textItemTitle">拿破伦《成功学》</string>
    <string name="textItemContent">成功学</string>
    <string name="textPlayCount">1234万</string>
    <string name="textItemContentCount">12集</string>
    <string name="imageItemIcon">栏目图片</string>
    <string name="textNetworkError">网络错误</string>
    <string name="textNetworkLoading">加载中</string>
    <string name="textContentEmpty">内容为空</string>
    <string name="textNetworkLoadMore">加载更多</string>
    <string name="textAuthor">作者</string>
    <string name="textSubscribe">+ 订阅</string>
    <string name="textOnPlay">点击播放</string>
    <string name="textOnSelect">选集</string>
    <string name="background">background</string>
    <string name="textCount">1</string>
    <string name="title">标题</string>
    <string name="sort">排序</string>
    <string name="play">播放</string>
    <string name="next">下一个</string>
    <string name="list">列表</string>
    <string name="previous">上一个</string>
    <string name="imageBackground">背景图片</string>
    <string name="minutesTime">%s:%s</string>
    <string name="textExit">关闭</string>
    <string name="textHistoryHint">上次播放到第%s集</string>
</resources>