<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center"
            app:contentScrim="@drawable/shape_status_gradient"
            app:expandedTitleGravity="center_vertical"
            app:expandedTitleMarginBottom="60dp"
            app:expandedTitleMarginStart="150dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@color/main_transparent"
            app:title="@string/app_name"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/imageBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/background"
                android:fitsSystemWindows="true"
                android:foreground="@drawable/shape_status_gradient"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1" />


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageAlbumIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="2"
                app:roundPercent="0.1"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/textAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:maxEms="20"
                android:maxLines="1"
                android:text="@string/textAuthor"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="-1" />

            <TextView
                android:id="@+id/textSubscribe"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_album_detail_order_text"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/textSubscribe"
                android:textColor="@color/white"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="1.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@color/littleWhite"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="2">

                <TextView
                    android:id="@+id/textOnPlay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="4"
                    android:clickable="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/textOnPlay"
                    app:drawableStartCompat="@mipmap/play_black" />

                <TextView
                    android:id="@+id/textOnSelect"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/textOnSelect"
                    app:drawableEndCompat="@mipmap/arrow_icon" />
            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/recycler"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">-->

    <!--    </androidx.recyclerview.widget.RecyclerView>-->
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>